tests/derive_ui/default_values_t_invalid.stderr
error: #[clap(default_values_t)] can be used only on Vec types

  = note: see https://github.com/clap-rs/clap/blob/master/examples/derive_ref/README.md#magic-attributes

 --> tests/derive_ui/default_values_t_invalid.rs:6:12
  |
6 |     #[clap(default_values_t = [1, 2, 3])]
  |            ^^^^^^^^^^^^^^^^
